translation-tool/inputs/source_meta/objects/HSvc_User_Queues__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Agent_Type__c</fullName>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Applicable_Country__c</fullName>
        <label>Applicable Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>QueueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Agent_Type__c</columns>
        <columns>QueueName__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UQ-{00000}</displayFormat>
        <label>User Queues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>